Redireccion en index a 6-1427200-4.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <!-- carga del navbar -->
   <script src="./js/nav.js"></script>
 
+  <meta http-equiv="refresh" content="0;URL='CISCO/6-1427200-4.html'" />
+
+
   <!-- titulo de la pagina -->
   <title>
     Switch Cisco Catalyst 9200L C9200L-24T, capa L3 con 24 puertos Gigabit, 04 puertos para fibra SFP, Stacking hasta 08
